# claude-commander

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
os/: CLAUDE.md
scripts/: release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  main.rs  models.rs  pty_state.rs  state.rs  utils.rs
src-tauri/src/commands/: claude.rs  env.rs  git.rs  github.rs  mod.rs  planning.rs  projects.rs  pty.rs  search.rs  settings.rs  terminal.rs  updater.rs
src-tauri/src/services/: file_watcher.rs
src/components/: CommandPalette.tsx  LinkGithubIssueDialog.tsx  OnboardingWizard.tsx  RootLayout.tsx  SecondaryNav.tsx
src/components/ui/: badge.tsx  button.tsx  scroll-area.tsx  separator.tsx
src/hooks/: useClaudeWatcher.ts
src/lib/: api.ts  store.ts  utils.ts
src/pages/: ClaudePlans.tsx  ClaudeSessions.tsx  ClaudeTasks.tsx  Dashboard.tsx  ProjectDeploy.tsx  ProjectDetail.tsx  ProjectEnv.tsx  ProjectGit.tsx  ProjectKanban.tsx  ProjectOverview.tsx  ProjectPlans.tsx  ProjectSessions.tsx  ProjectTasks.tsx  ProjectTerminal.tsx  ProjectsList.tsx  SessionDetail.tsx  SettingsPage.tsx
src/types/: index.ts
